--- a/bower.json
+++ b/bower.json
@@ -13,12 +13,12 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.5.8",
+    "angular": "1.5.8",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.0",
     "jquery-old": "jquery#1.12.1",
     "jquery-ui": "^1.12.0",
-    "angular-route": "^1.5.8",
+    "angular-route": "1.5.8",
     "jquery2": "jquery#2.2.1",
     "lodash": "^4.15.0"
   }
